syntax = "proto3";
package grpc_web.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/grpc_web";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

import "github.com/solo-io/gloo/projects/gloo/api/v1/options/transformation/parameters.proto";

// GrpcWeb support is enabled be default. Use this extension to disable it.
message GrpcWeb {
  // Disable grpc web support.
  bool disable = 1;
}